The "Article not found" error page is not shown for "Remove All Expired Articles" (this._msgWindow is undefined)
Categories
(MailNews Core :: Networking: NNTP, defect, P3)
Tracking
(thunderbird_esr102 unaffected)
| Tracking | Status | |
|---|---|---|
| thunderbird_esr102 | --- | unaffected |
People
(Reporter: infofrommozilla, Assigned: mkmelin)
References
(Regression)
Details
(Keywords: regression, Whiteboard: [Supernova3p])
Attachments
(3 files, 1 obsolete file)
If an article is no longer available on the server, the "Article not found" error page should be displayed.
In the TB113.0b1 I only get an empty window.
| Reporter | ||
Updated•2 years ago
|
| Reporter | ||
Comment 1•2 years ago
|
||
The "Article not found" page should be created here:
https://searchfox.org/comm-central/source/mailnews/news/src/NntpClient.jsm#192
if (this._msgWindow && this._articleNumber) {
but this._msgWindow is undefined.
And this is because in Bug 1799764 the [top.]msgWindow parameter for messageService.DisplayMessage( was replaced by null:
https://phabricator.services.mozilla.com/D161656
https://searchfox.org/comm-central/source/mail/base/content/aboutMessage.js#193
messageService.DisplayMessage(uri, browser.docShell, null, null, null, {});
This is then passed on, up to the this._msgWindow above.
Comment 2•2 years ago
|
||
Thanks Alfred for detailed analysis!
| Assignee | ||
Comment 3•2 years ago
|
||
Rename DisplayMessage to loadMessage + remove unused outUrl. This is a more appropriate name as it's strictly not just about displaying, but used for e.g. copying too.
OutUrl was passed around to CopyMessage.
Rename CopyMessage to copyMessage and remove unused outUrl.
Updated•2 years ago
|
| Assignee | ||
Comment 4•2 years ago
|
||
Depends on D176129
| Assignee | ||
Comment 5•2 years ago
|
||
Alfred, are you able to test the patches? I'm not sure where to find an expired article.
| Reporter | ||
Comment 6•2 years ago
|
||
D176129 unfortunately not. I do not have a working build environment.
D176130: Just reinserting top.msgWindow does not work. TB throws an exception:
mailnews.nntp: NS_ERROR_FAILURE: Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIMsgWindow.displayURIInMessagePane]
_onData resource:///modules/NntpClient.jsm:209
NntpClient.jsm:216:28
_onData resource:///modules/NntpClient.jsm:216
https://searchfox.org/comm-central/source/mailnews/news/src/NntpClient.jsm#209
this._msgWindow.displayURIInMessagePane(
We can try it, but we're equally unsure where to find expired articles. Don't they happen when some articles are removed a while after initially downloading a newsgroup? So on a new profile with newly setup newsgroups there wouldn't be any? That said, we've found some on an existing profile in a.c.s.thunderbird.
| Reporter | ||
Comment 8•2 years ago
|
||
The easiest way is to create one yourself. For this you need a 2nd TB ("TB-b").
- post an article to a test group with "TB-b".
- with "TB-a" subscribe and update the group without viewing the article. Otherwise it will be cached.
- cancel the article with "TB-b": Menu -> Message -> Cancel Message
- show the article with "TB-a"...
With both patches applied, we see what Alfred posted in comment #6. this._msgWindow.displayURIInMessagePane() tries to display this URI about:newserror?r=No such article number 6070&m=9cf564d2-f3e5-4f74-abf7-67b8affd96b0n%40googlegroups.com&k=6070&f=news://news.eternal-september.org/alt.de.test and fails.
A bit of debugging showed that DisplayURIInMessagePane() fails in GetMessageWindowDocShell():
https://searchfox.org/comm-central/rev/04176849c949facaabc16deb07dd2e42b81b5173/mailnews/base/src/nsMsgWindow.cpp#73
likely due to some Supernova changes.
| Assignee | ||
Comment 10•2 years ago
|
||
Right, this should apparently be handled some other way now. See https://searchfox.org/comm-central/rev/04176849c949facaabc16deb07dd2e42b81b5173/mail/base/content/aboutMessage.js#193
This is the last use of DisplayURIInMessagePane/DisplayHTMLInMessagePane
Comment 11•2 years ago
|
||
The now failing GetMessageWindowDocShell() is still called in a few places:
https://searchfox.org/comm-central/search?q=GetMessageWindowDocShell&path=&case=false®exp=false
Also note bug 1758743 in this context.
Comment 12•2 years ago
|
||
Updating whiteboard to [supernova3p]. 20230424_2303
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
Comment 13•2 years ago
|
||
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/ac54a319662f
Some refactoring of nsIMsgMessageService. r=benc
| Assignee | ||
Comment 14•2 years ago
|
||
Add a way to show error pages.
Updated•2 years ago
|
Comment 15•2 years ago
|
||
After D176753, displayURIInMessagePane() and its remaining last other unused caller displayHTMLInMessagePane() can be removed.
| Assignee | ||
Comment 16•2 years ago
|
||
Yeah, planning to do that.
| Assignee | ||
Comment 17•2 years ago
|
||
Depends on D176753
| Assignee | ||
Updated•2 years ago
|
Comment 18•2 years ago
|
||
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/7a3924d978a4
Fix showing "Article not found" error page for expired nntp articles. r=aleca
| Assignee | ||
Updated•2 years ago
|
Comment 19•2 years ago
|
||
Pushed by john@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/e2b52692b39f
Remove unused msgWindow.displayURIInMessagePane/displayHTMLInMessagePane. r=BenC
| Reporter | ||
Updated•2 years ago
|
Description
•