Bug 1828331 - Remove unused msgWindow.displayURIInMessagePane/displayHTMLInMessagePane. r=BenC

Differential Revision: https://phabricator.services.mozilla.com/D176781

Depends on D176753

--HG--
extra : rebase_source : f296a50c03b1dbb292bdcfd047e0ec4ae92567a1
extra : amend_source : 9fff8830173f4f96af8614fa0590fdf4a2fde08d